--- a/index.html
+++ b/index.html
@@ -15,132 +15,137 @@
 
 <body id="body">
 
-    <header id="nav">
-        <p>Matt Nelson</p>
-        <nav>
-            <p id="audio-button">Audio</p>
-            <p id="web-button">Web</p>
-            <p id="teaching-button">Teaching</p>
-            <p id="other-button">Other</p>
-        </nav>
-    </header>
+    <div class="bg" id="bg"></div>
 
-    <main>
-        <div>
-            <div id="down-arrow"></div>
-        </div>
+    <div class="content">
 
-        <section class="category" id="audio">
-            <div class="card">
-                <img src="/assets/images/audio/jagged-dog-tape.jpg">
-                <div class="overlay">
-                    <h2>type/token: the jagged dog</h2>
-                </div>
+        <header id="nav">
+            <p>Matt Nelson</p>
+            <nav>
+                <p id="audio-button">Audio</p>
+                <p id="web-button">Web</p>
+                <p id="teaching-button">Teaching</p>
+                <p id="other-button">Other</p>
+            </nav>
+        </header>
+
+        <main>
+            <div>
+                <div id="down-arrow"></div>
             </div>
 
-            <div class="card">
-                <img src="/assets/images/audio/still-tape.jpg">
-                <div class="overlay">
-                    <h2>type/token: still</h2>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="/assets/images/audio/jello-world-tape.jpg">
-                <div class="overlay">
-                    <h2>Vacationland: Jello World</h2>
-                </div>
-            </div>
-        </section>
-
-        <section class="category" id="web">
-            <div class="card">
-                <img src="/assets/images/web/delta_wave title.gif">
-                <div class="overlay">
-                    <h2>Delta Wave: Polyrhythmic Synthesizer</h2>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="/assets/images/web/p5grain.png">
-                <div class="overlay">
-                    <h2>p5_grain: Granular sample player</h2>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="/assets/images/web/mosaic.png">
-                <div class="overlay">
-                    <h2>Mosaic: RGB-based monosynth</h2>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="/assets/images/web/pling-pong1.png">
-                <div class="overlay">
-                    <h2>Pling Pong: Esoteric Melodies</h2>
-                </div>
-            </div>
-        </section>
-
-        <section class="category" id="teaching">
-
-            <div class="card">
-                <img src="/assets/images/teaching/sonic-pi-class.jpg">
-                <div class="overlay">
-                    <h2>Creative Coding with Sonic Pi</h2>
-                </div>
-            </div>
-
-            <div class="card">
-                <a href="https://grayarea.org/course/creative-code-intensive/" target="_blank">
-                    <img src="/assets/images/teaching/web-audio-course.png">
+            <section class="category" id="audio">
+                <div class="card">
+                    <img src="/assets/images/audio/jagged-dog-tape.jpg">
                     <div class="overlay">
-                        <h2>Creative Code Intensive: Web Audio</h2>
+                        <h2>type/token: the jagged dog</h2>
                     </div>
-                </a>
-            </div>
-
-            <div class="card">
-                <img src="/assets/images/teaching/electronic-music-class.jpg">
-                <div class="overlay">
-                    <h2>Intro to Electronic Music</h2>
                 </div>
-            </div>
-        </section>
 
-        <section class="category" id="other">
-
-            <div class="card">
-                <img src="/assets/images/other/tomatoes.png">
-                <div class="overlay">
-                    <h2>Tomatoes: Editing and Sound Design</h2>
+                <div class="card">
+                    <img src="/assets/images/audio/still-tape.jpg">
+                    <div class="overlay">
+                        <h2>type/token: still</h2>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="/assets/images/other/heavy-water.jpg">
-                <div class="overlay">
-                    <h2>Heavy Water: Editing and Sound Design</h2>
+                <div class="card">
+                    <img src="/assets/images/audio/jello-world-tape.jpg">
+                    <div class="overlay">
+                        <h2>Vacationland: Jello World</h2>
+                    </div>
                 </div>
-            </div>
+            </section>
 
-            <div class="card">
-                <img src="/assets/images/other/TDA-Still.jpg">
-                <div class="overlay">
-                    <h2>The Way Things Can Happen: Editing and Sound Design</h2>
+            <section class="category" id="web">
+                <div class="card">
+                    <img src="/assets/images/web/delta_wave title.gif">
+                    <div class="overlay">
+                        <h2>Delta Wave: Polyrhythmic Synthesizer</h2>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="/assets/images/other/many-miles.jpeg">
-                <div class="overlay">
-                    <h2>Many Thousand Miles Behind Us: Sound Design</h2>
+                <div class="card">
+                    <img src="/assets/images/web/p5grain.png">
+                    <div class="overlay">
+                        <h2>p5_grain: Granular sample player</h2>
+                    </div>
                 </div>
-            </div>
-        </section>
 
-    </main>
+                <div class="card">
+                    <img src="/assets/images/web/mosaic.png">
+                    <div class="overlay">
+                        <h2>Mosaic: RGB-based monosynth</h2>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/assets/images/web/pling-pong1.png">
+                    <div class="overlay">
+                        <h2>Pling Pong: Esoteric Melodies</h2>
+                    </div>
+                </div>
+            </section>
+
+            <section class="category" id="teaching">
+
+                <div class="card">
+                    <img src="/assets/images/teaching/sonic-pi-class.jpg">
+                    <div class="overlay">
+                        <h2>Creative Coding with Sonic Pi</h2>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <a href="https://grayarea.org/course/creative-code-intensive/" target="_blank">
+                        <img src="/assets/images/teaching/web-audio-course.png">
+                        <div class="overlay">
+                            <h2>Creative Code Intensive: Web Audio</h2>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <img src="/assets/images/teaching/electronic-music-class.jpg">
+                    <div class="overlay">
+                        <h2>Intro to Electronic Music</h2>
+                    </div>
+                </div>
+            </section>
+
+            <section class="category" id="other">
+
+                <div class="card">
+                    <img src="/assets/images/other/tomatoes.png">
+                    <div class="overlay">
+                        <h2>Tomatoes: Editing and Sound Design</h2>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/assets/images/other/heavy-water.jpg">
+                    <div class="overlay">
+                        <h2>Heavy Water: Editing and Sound Design</h2>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/assets/images/other/TDA-Still.jpg">
+                    <div class="overlay">
+                        <h2>The Way Things Can Happen: Editing and Sound Design</h2>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/assets/images/other/many-miles.jpeg">
+                    <div class="overlay">
+                        <h2>Many Thousand Miles Behind Us: Sound Design</h2>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+    </div>
 </body>
 
 </html>
