--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="jquery.js"></script>
     <script src="main.js"></script>
     <script src="p5.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body id="body">
