--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             </div>
 
             <section class="category" id="audio">
+
+                <div class="card">
+                    <img src="/assets/images/audio/riparian-zone.jpg">
+                    <a href="https://tracedobjects.bandcamp.com/album/riparian-zone" target="_blank">
+                        <div class="overlay">
+                            <h2>type/token: riparian zone</h2>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="card">
                     <img src="/assets/images/audio/jagged-dog-tape.jpg">
                     <a href="https://tracedobjects.bandcamp.com/album/the-jagged-dog" target="_blank">
@@ -64,6 +74,15 @@
             </section>
 
             <section class="category" id="web">
+                <div class="card">
+                    <img src="/assets/images/web/riparianzone.png">
+                    <a href="https://riparianz.one/" target="_blank">
+                        <div class="overlay">
+                            <h2>riparianz.one: track mangler</h2>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="card">
                     <img src="/assets/images/web/delta_wave title.gif">
                     <a href="https://mattholamieux.github.io/delta_wave/" target="_blank">
