--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <div class="content">
 
         <header id="nav">
-            <p>Matt Nelson</p>
+            <h3>Matt Nelson</h3>
             <nav>
-                <p class="nav-button" id="audio-button">Audio</p>
-                <p class="nav-button" id="web-button">Web</p>
-                <p class="nav-button" id="teaching-button">Teaching</p>
-                <p class="nav-button" id="other-button">Other</p>
+                <p class="nav-button" id="audio-button">audio</p>
+                <p class="nav-button" id="web-button">web</p>
+                <p class="nav-button" id="teaching-button">teaching</p>
+                <p class="nav-button" id="other-button">other</p>
+                <p class="nav-button" id="about-button">about</p>
             </nav>
         </header>
 
@@ -192,6 +193,21 @@
                         <h2>Many Thousand Miles Behind Us: Sound Design</h2>
                     </div>
                 </div>
+            </section>
+
+            <section class="category" id="about">
+                <div class="card">
+                    <!-- <img src="/assets/images/other/many-miles.jpeg"> -->
+                    <div class="overlay">
+                        <p>I am an educator, musician, and creative coder, based in Oakland, California. Throughout my life, I have been driven by a love of sound. From recording guitar loops on my parents four-track tape machine, to building custom audio
+                            plugins for my favorite software, I have always enjoyed exploring how sound can be manipulated, deconstructed, and rearranged to create new listening experiences.
+                        </p>
+                        <p>Today, in my professional life, I am the Education Director of an educational non-profit that teaches audio production, video editing, and web development to incarcerated individuals across the United States. In my creative life,
+                            I explore the intersection of hardware and software processes through the creation of ambient compositions and bespoke audio and web apps.
+                        </p>
+                    </div>
+                </div>
+
             </section>
 
         </main>
