updates for mobile friendliness :)

--- a/index.html
+++ b/index.html
@@ -15,19 +15,10 @@
 
 <body id="body">
 
-    <div class="bg" id="bg"></div>
-
     <div class="content">
 
         <header id="nav">
             <h3>Matt Nelson</h3>
-            <nav>
-                <p class="nav-button" id="audio-button">audio</p>
-                <p class="nav-button" id="web-button">web</p>
-                <p class="nav-button" id="teaching-button">teaching</p>
-                <p class="nav-button" id="other-button">other</p>
-                <p class="nav-button" id="about-button">about</p>
-            </nav>
         </header>
 
         <main>
@@ -36,6 +27,11 @@
             </div>
 
             <section class="category" id="audio">
+
+                <div class="card">
+                    <img src="/assets/audio.svg">
+                    </a>
+                </div>
 
                 <div class="card">
                     <img src="/assets/images/audio/riparian-zone.jpg">
@@ -75,6 +71,12 @@
             </section>
 
             <section class="category" id="web">
+
+                <div class="card">
+                    <img src="/assets/web.svg">
+                    </a>
+                </div>
+
                 <div class="card">
                     <img src="/assets/images/web/riparianzone.png">
                     <a href="https://riparianz.one/" target="_blank">
@@ -124,6 +126,11 @@
             <section class="category" id="teaching">
 
                 <div class="card">
+                    <img src="/assets/teaching.svg">
+                    </a>
+                </div>
+
+                <div class="card">
                     <img src="/assets/images/teaching/sonic-pi-class.jpg">
                     <a href="https://sattya.org/" target="_blank">
                         <div class="overlay">
@@ -150,6 +157,11 @@
             </section>
 
             <section class="category" id="other">
+
+                <div class="card">
+                    <img src="/assets/other.svg">
+                    </a>
+                </div>
 
                 <div class="card">
                     <img src="/assets/images/other/tomatoes.png">
@@ -198,12 +210,12 @@
             <section class="category" id="about">
                 <div class="card">
                     <!-- <img src="/assets/images/other/many-miles.jpeg"> -->
-                    <div class="overlay">
-                        <p>I am an educator, musician, and creative coder, based in Oakland, California. Throughout my life, I have been driven by a love of sound. From recording guitar loops on my parents four-track tape machine, to building custom audio
-                            plugins for my favorite software, I have always enjoyed exploring how sound can be manipulated, deconstructed, and rearranged to create new listening experiences.
-                        </p>
-                        <p>Today, in my professional life, I am the Education Director of an educational non-profit that teaches audio production, video editing, and web development to incarcerated individuals across the United States. In my creative life,
-                            I explore the intersection of hardware and software processes through the creation of ambient compositions and bespoke audio and web apps.
+                    <div>
+                        <p>Matt Nelson is a musician, creative technologist, and middle-school teacher, based in Oakland, California. His work explores the intersection of hardware and software processes through the creation of experimental ambient compositions
+                            and bespoke audio apps. As an “untrained” musician, his practice is driven by a critical curiosity and attunement to the material/sonic environment, rather than music theory or conceptual goals. To support this practice, he
+                            creates opinionated and unpredictable software tools that reward hands-on exploration and discovery. Inspired by the idea of embodied cognition, he sees interactions with these technologies as their own way of thinking, not
+                            simply as a means for translating preformed ideas into sonic output. As a teacher, he has shared his playful approach to technology with artists, incarcerated coders, and middle school students. His music has appeared in physical
+                            and digital formats on the Maine-based label and press Traced Objects.
                         </p>
                     </div>
                 </div>
